# server/routes/review.ts
@@ -5,5 +5,6 @@ const jwtauth = require('../middlewares/jwtauth')
 import review from '../controllers/review.controller';
 
 router.post('/addnew/:p_id', [jwtauth, reviewValidator()], review.newReview);
+router.get('/getall/:p_id', review.getAllProductReviews)
 
 module.exports = router;
